:bug: Fix cropped project item

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -103,11 +103,11 @@
   background-size: contain;
   background-repeat: no-repeat;
   @include mediaQuery(mobile) {
-    transform: translateY(-100%);
-    transition: transform 0.1s ease;
+    opacity: 0;
+    transition: opacity 0.1s ease;
     &Open {
-      transition: transform 0.3s ease;
-      transform: none;
+      opacity: 1;
+      transition: opacity 0.2s ease 0.3s;
     }
   }
 }
